--- a/src/i18n/resources/en.json
+++ b/src/i18n/resources/en.json
@@ -1,9 +1,319 @@
 {
+  "me": "I",
+  "you": "you",
+  "yes": "yes",
+  "no": "no",
+  "confirm": "confirm",
+  "cancel": "cancel",
+  "pieces": "pieces",
+  "open": "open",
+  "close": "close",
   "toast": {
-    "accessSuccess": "操作成功！",
-    "accessFailed": "操作失败！",
-    "getConversationFailed": "获取会话列表失败！",
-    "getGroupInfoFailed": "获取群信息失败！",
-    "getGroupMemberFailed": "获取群成员信息失败！"
+    "accessSuccess": "Operation successful!",
+    "accessFailed": "Operation failed!",
+    "getConversationFailed": "Failed to retrieve conversation list!",
+    "getGroupInfoFailed": "Failed to retrieve group info!",
+    "getGroupMemberFailed": "Failed to retrieve group member info!",
+    "getHistoryMessageFailed": "Failed to retrieve history messages!",
+    "getSelfInfoFailed": "Failed to retrieve personal information!",
+    "getFriendListFailed": "Failed to retrieve friend list!",
+    "getBlackListFailed": "Failed to retrieve blacklist!",
+    "getGroupListFailed": "Failed to retrieve group list!",
+    "getUserInfoFailed": "Failed to retrieve user info!",
+    "pinConversationFailed": "Failed to change pinned conversation status!",
+    "setConversationRecvMessageOptFailed": "Failed to modify conversation message receipt status!",
+    "clearConversationMessagesFailed": "Failed to delete conversation messages!",
+    "deleteConversationFailed": "Failed to delete conversation!",
+    "updateGroupInfoFailed": "Failed to update group info!",
+    "updateBlackStateFailed": "Failed to update blacklist status!",
+    "unfriendFailed": "Failed to unfriend!",
+    "getMessageListFailed": "Failed to retrieve message list!",
+    "sendApplicationFailed": "Failed to send request!",
+    "loading": "Logging in...",
+    "syncing": "Syncing...",
+    "syncFailed": "Sync failed!",
+    "clearChatHistory": "Clear chat history!",
+    "confirmClearChatHistory": "Are you sure you want to clear chat history?",
+    "applyDownloadFailed": "Download failed!",
+    "loginExpiration": "Your login has expired, please log in again!",
+    "accountKicked": "Your account has been logged in on another device, please log in again!",
+    "updatePasswordSuccess": "Password changed successfully, please log in again!",
+    "inputOldPassword": "Please enter your old password!",
+    "passwordRules": "Please enter a combination of 6-20 letters and numbers!",
+    "reconfirmPassword": "Please re-confirm your password!",
+    "passwordsDifferent": "Passwords entered don't match!",
+    "confirmlogOut": "Are you sure you want to log out?",
+    "updateAvatarFailed": "Failed to update avatar!",
+    "notCanSendMessage": "Cannot send messages in a group chat you've left!",
+    "groupMuted": "The administrator or group owner has muted everyone!",
+    "messagesDeleteFailed": "Some messages failed to delete!",
+    "confirmkickMember": "Are you sure you want to kick out {{name}} from the group chat?",
+    "addSuccess": "Added successfully!",
+    "copySuccess": "Copied successfully!",
+    "copyFailed": "Copy failed!",
+    "confirmDisbandGroup": "Are you sure you want to disband this group?",
+    "confirmExitGroup": "Are you sure you want to leave this group?",
+    "confirmMoveBlacklist": "Are you sure you want to add the friend to the blacklist?",
+    "confirmUnfriend": "Are you sure you want to unfriend?",
+    "selectLeastOne": "Please select at least one!",
+    "inputGroupName": "Please enter group name",
+    "sendSuccess": "Sent successfully!",
+    "beyondSelectionLimit": "Exceeded selection limit!",
+    "sendJoinGroupRequestSuccess": "Group join request sent successfully!",
+    "inputNickName": "Please enter a nickname",
+    "inputCorrectPhoneNumber": "Please enter a valid phone number",
+    "inputCorrectEmail": "Please enter a valid email",
+    "inputVerifyCode": "Please enter your verification code",
+    "inputPassword": "Please enter your password",
+    "sendFreiendRequestSuccess": "Friend request sent successfully!",
+    "registerSuccess": "Registered successfully!",
+    "inputInvitationCode": "Please enter your invitation code",
+    "downloadFailed": "Download failed!",
+    "beingBlacklist": "You have been added to the other person's blacklist!",
+    "usingFriendVerification": "Friend verification is on, you are not their friend yet!"
+  },
+  "placeholder": {
+    "somePerson": "{{num}} people",
+    "selectMember": "Select members",
+    "setInfo": "Set information",
+    "regain": "Retrieve again",
+    "optional": "(Optional)",
+    "invitationCode": "Invitation code",
+    "getBack": "Go back",
+    "nextStep": "Next step",
+    "register": "New user registration",
+    "registerToast": "Don't have an account?",
+    "toRegister": "Register now",
+    "login": "Login",
+    "pleaseEnterSendTo": "Please enter send to",
+    "verifyCode": "Verification code",
+    "verifyValidity": "6-digit code for, valid for 10 minutes",
+    "sendVerifyCode": "Send verification code",
+    "qrCodeLogin": "QR code login",
+    "qrCodeLoginTitle": "Please scan the QR code using OpenIM mobile app",
+    "welcome": "Welcome to OpenIM",
+    "title": "Online Office",
+    "subTitle": "Collaborate with multiple people to create an efficient way of working",
+    "myCreated": "Created by me",
+    "myJoined": "Joined by me",
+    "newFriends": "New friends",
+    "groupNotification": "Group notifications",
+    "friendVerification": "Friend verification",
+    "groupInfo": "Group information",
+    "personalInfo": "Personal information",
+    "inviteToGroup": "Invite to group",
+    "qrCodeToGroup": "Join group by scanning QR code",
+    "selectIDToGroup": "Search group ID",
+    "remark": "Remarks",
+    "email": "Email",
+    "phoneNumber": "Phone number",
+    "verifyPhoneNumber": "Verify phone number",
+    "birth": "Birthday",
+    "gender": "Gender",
+    "man": "Male",
+    "female": "Female",
+    "unknown": "Unknown",
+    "nickName": "Nickname",
+    "groupNickName": "Group nickname",
+    "joinGroupTime": "Time of joining group",
+    "joinGroupMode": "Method of joining group",
+    "editInfo": "Edit profile",
+    "message": "Chat information",
+    "relevantMessage": "{{count}} related chat records",
+    "overview": "Overview",
+    "latestChat": "Recent chats",
+    "myFriend": "My friends",
+    "myGroup": "My groups",
+    "groupName": "Group name",
+    "groupAvatar": "Group avatar",
+    "groupMember": "Group members",
+    "selected": "Selected",
+    "moveBlacklist": "Add to blacklist",
+    "willFilterThisUserMessage": "You will not receive messages from this friend.",
+    "unfriend": "Unfriend",
+    "shieldConversation": "Mute this conversation",
+    "isRead": "Read",
+    "unread": "Unread",
+    "revoke": "Revoke",
+    "copy": "Copy",
+    "check": "Multiple select",
+    "sendMessage": "Send message",
+    "save": "Save",
+    "group": "Group",
+    "groupType": "Group type",
+    "workGroup": "Work group",
+    "myGroupNickname": "My group nickname",
+    "notNotify": "Mute notifications",
+    "allMuted": "Mute all",
+    "groupVerification": "Group chat verification",
+    "groupMemberPermissions": "Group member permissions",
+    "transferGroup": "Transfer group",
+    "exitGroup": "Exit group",
+    "exitGroupToast": "After exiting, you will no longer receive messages from this group.",
+    "disbandGroup": "Disband group",
+    "disbandGroupToast": "After disbanding, all group members will be removed.",
+    "and": "And",
+    "groupOwner": "Group owner",
+    "administrator": "Administrator",
+    "setAdministrator": "Set as administrator",
+    "mute": "Mute",
+    "cancelMute": "Unmute",
+    "setMute": "Set mute",
+    "onlyManageCanSend": "Only the group owner and administrators can send messages when enabled.",
+    "publish": "Publish",
+    "edit": "Edit",
+    "file": "File",
+    "emoji": "Emoji",
+    "image": "Image",
+    "video": "Video",
+    "card": "Card",
+    "personalCard": "Personal card",
+    "screenshot": "Screenshot",
+    "sticky": "Pin",
+    "pleaseEnter": "Please enter",
+    "clickToModify": "Click to modify",
+    "search": "Search",
+    "about": "About us",
+    "password": "Password",
+    "forgetPassword": "Forgot password",
+    "changePassword": "Change password",
+    "checkNewVersion": "Check for new version",
+    "viewMore": "View more",
+    "add": "Add",
+    "remove": "Remove",
+    "delete": "Delete",
+    "close": "Close",
+    "blackList": "Address book blacklist",
+    "oldPassword": "Old password:",
+    "newPassword": "New password:",
+    "confirmPassword": "Confirm password:",
+    "chat": "Message",
+    "contact": "Contact",
+    "contacts": "Contacts",
+    "myInfo": "My information",
+    "accountSetting": "Account settings",
+    "logOut": "Log out",
+    "personalSetting": "Personal settings",
+    "chooseLanguage": "Choose language",
+    "closeButtonEvent": "Event when clicking the close button",
+    "exitApplication": "Exit application",
+    "minimize": "Minimize to tray",
+    "messageToast": "Message notification",
+    "messageAllowBeep": "New message notification sound",
+    "messageNotNotify": "Do not disturb mode",
+    "addFriends": "Add friends",
+    "addGroup": "Add group",
+    "createGroup": "Create group chat",
+    "createNow": "Create now",
+    "createGroupToast": "Create a group to start online collaboration immediately",
+    "addFriendsSetting": "Add friends settings",
+    "refuseAddFriend": "Prevent others from adding me as a friend",
+    "markAsRead": "Mark as read",
+    "send": "Send",
+    "sendTo": "Send to:",
+    "groupAnnouncement": "Group announcement",
+    "noGroupAnnouncement": "There is no group announcement~",
+    "needManageEdit": "Only the group owner and administrators can edit",
+    "loosenToSend": "Release to send",
+    "reEdit": "Edit again",
+    "multipleNewMessages": "{{count}} new messages",
+    "reply": "Reply",
+    "sendShortcutkey": "Enter to send/Shift+Enter for a new line",
+    "mentionAll": "Everyone",
+    "forward": "Forward",
+    "mergeForward": "Merge and forward",
+    "messageHistory": "Chat history",
+    "historyList": "History list",
+    "memberList": "Group member list",
+    "invitation": "Invite friends",
+    "share": "Share card",
+    "selectUser": "Select user",
+    "setting": "Settings",
+    "offLine": "Offline",
+    "online": "Online",
+    "typing": "Typing",
+    "kick": "Kick out",
+    "kickMember": "Kick out member",
+    "forbidLookMemberInfo": "Disallow viewing other group members' profiles",
+    "forbidAddMember": "Disallow adding group members as friends",
+    "applyNeedInvite": "Group member invitations do not require verification",
+    "applyNeedVerification": "Verification message required",
+    "applyAll": "Allow everyone to join the group"
+  },
+  "empty": {
+    "showAllResults": "All results displayed!",
+    "noSearchResults": "No more search results!",
+    "fileContentEmpty": "File is empty!"
+  },
+  "messageDescription": {
+    "imageMessage": "[Image]",
+    "voiceMessage": "[Voice]",
+    "fileMessage": "[File]{{file}}",
+    "locationMessage": "[Location]{{location}}",
+    "videoMessage": "[Video]",
+    "cardMessage": "[Card]",
+    "faceMessage": "[Emoji]",
+    "rtcMessage": "[Call]",
+    "quoteMessage": "[Quoted Message]",
+    "mergeMessage": "[Chat History]",
+    "customMessage": "[Custom Message]",
+    "notSupMessage": "[Unsupported Message Type]",
+    "atAllPrefix": "[Everyone]",
+    "atYouPrefix": "[Someone @you]",
+    "unreadCount": "[{{count}} messages]",
+    "catchMessage": "[Unsupported Message Type]",
+    "groupAnnouncementPrefix": "[Group Announcement]",
+    "revokeMessage": "{{revoker}} has revoked a message",
+    "advanceRevokeMessage": "{{operator}} revoked a message sent by {{revoker}}",
+    "alreadyFriendMessage": "You are already friends, start chatting!",
+    "createGroupMessage": "{{creator}} created a group chat",
+    "updateGroupInfoMessage": "{{operator}} updated the group info",
+    "updateGroupNameMessage": "{{operator}} changed the group name to {{name}}",
+    "updateGroupAnnouncementMessage": "{{operator}} updated the group announcement",
+    "transferGroupMessage": "{{owner}} transferred the group ownership to {{newOwner}}",
+    "quitGroupMessage": "{{name}} left the group chat",
+    "invitedToGroupMessage": "{{operator}} invited {{invitedUser}} to the group chat",
+    "kickInGroupMessage": "{{operator}} kicked out {{kickedUser}}",
+    "joinGroupMessage": "{{name}} joined the group chat",
+    "disbanedGroupMessage": "{{operator}} disbanded the group chat",
+    "allMuteMessage": "{{operator}} enabled mute for all",
+    "cancelAllMuteMessage": "{{operator}} disabled mute for all",
+    "singleMuteMessage": "{{name}} was muted by {{operator}} for {{muteTime}}",
+    "cancelSingleMuteMessage": "{{operator}} unmuted {{name}}",
+    "burnReadStatus": "Burn after reading has been {{status}}"
+  },
+  "date": {
+    "second": "{{num}} seconds",
+    "minute": "{{num}} minutes",
+    "hour": "{{num}} hours",
+    "day": "{{num}} days",
+    "justNow": "just now",
+    "thisWeek": "this week",
+    "thisMonth": "this month",
+    "earlier": "earlier"
+  },
+  "application": {
+    "agree": "agree",
+    "refuse": "refuse",
+    "agreed": "agreed",
+    "refused": "refused",
+    "information": "verification information",
+    "pending": "waiting for verification",
+    "applyToJoin": "apply to join",
+    "applyToFriend": "sent you a friend request"
+  },
+  "errCode": {
+    "passwordError": "password incorrect",
+    "accountNotExist": "account does not exist",
+    "phoneNumberRegistered": "phone number already registered",
+    "accountRegistered": "account already registered",
+    "operationTooFrequent": "operation too frequent, please try again later",
+    "verificationCodeError": "verification code incorrect",
+    "verificationCodeExpired": "verification code expired",
+    "verificationCodeErrorLimitExceed": "verification code attempts exceeded, please try again later",
+    "verificationCodeUsed": "verification code has been used",
+    "invitationCodeUsed": "invitation code has been used",
+    "invitationCodeNotExist": "invitation code does not exist",
+    "operationRestriction": "operation restricted"
   }
 }
