--- a/src/i18n/resources/zh.json
+++ b/src/i18n/resources/zh.json
@@ -1,5 +1,13 @@
 {
+  "me": "我",
   "you": "你",
+  "yes": "是",
+  "no": "否",
+  "confirm": "确认",
+  "cancel": "取消",
+  "pieces": "条",
+  "open": "开启",
+  "close": "关闭",
   "toast": {
     "accessSuccess": "操作成功！",
     "accessFailed": "操作失败！",
@@ -11,26 +19,231 @@
     "getFriendListFailed": "获取好友列表失败！",
     "getBlackListFailed": "获取黑名单列表失败！",
     "getGroupListFailed": "获取群列表失败！",
-    "getOnlineStatusFailed": "获取在线状态失败！",
-    "getMemberListFailed": "获取群成员失败！",
     "getUserInfoFailed": "获取用户信息失败！",
     "pinConversationFailed": "修改会话置顶状态失败！",
     "setConversationRecvMessageOptFailed": "修改会话消息接收状态失败！",
     "clearConversationMessagesFailed": "删除会话消息失败！",
     "deleteConversationFailed": "删除会话失败！",
-    "updateGroupVerificationFailed": "修改群验证方式失败！",
     "updateGroupInfoFailed": "修改群信息失败！",
-    "updateConversationPrivateStateFailed": "修改阅后即焚状态失败！",
     "updateBlackStateFailed": "修改黑名单状态失败！",
     "unfriendFailed": "解除好友失败！",
     "getMessageListFailed": "获取消息列表失败！",
-    "sendApplicationFailed": "发送请求失败！"
+    "sendApplicationFailed": "发送请求失败！",
+    "loading": "登陆中...",
+    "syncing": "同步中...",
+    "syncFailed": "同步失败！",
+    "clearChatHistory": "清空聊天记录！",
+    "confirmClearChatHistory": "确认清空聊天记录吗？",
+    "applyDownloadFailed": "下载失败！",
+    "loginExpiration": "当前登录已过期,请重新登录！",
+    "accountKicked": "您的账号已在其他设备登录,请重新登录！",
+    "updatePasswordSuccess": "修改密码成功，请重新登录！",
+    "inputOldPassword": "请输入原密码！",
+    "passwordRules": "请输入6-20位字母+数字组合！",
+    "reconfirmPassword": "请再次确认您的密码！",
+    "passwordsDifferent": "两次输入的密码不一致！",
+    "confirmlogOut": "确认退出登录当前账号吗？",
+    "updateAvatarFailed": "修改头像失败！",
+    "notCanSendMessage": "无法在已退出的群聊中发送消息！",
+    "groupMuted": "管理员或群主已开启全体禁言！",
+    "messagesDeleteFailed": "部分消息删除失败！",
+    "confirmkickMember": "确认将{{name}}踢出群聊吗？",
+    "addSuccess": "添加成功！",
+    "copySuccess": "复制成功！",
+    "copyFailed": "复制失败！",
+    "confirmDisbandGroup": "确认解散该群组吗？",
+    "confirmExitGroup": "确认退出该群组吗？",
+    "confirmMoveBlacklist": "确认将好友加入黑名单吗？",
+    "confirmUnfriend": "确认解除好友吗？",
+    "selectLeastOne": "请至少选择一项！",
+    "inputGroupName": "请输入群名称",
+    "sendSuccess": "发送成功！",
+    "beyondSelectionLimit": "超出选择限制！",
+    "sendJoinGroupRequestSuccess": "发送入群请求成功！",
+    "inputNickName": "请输入昵称",
+    "inputCorrectPhoneNumber": "请输入手机号",
+    "inputCorrectEmail": "请输入邮箱",
+    "inputVerifyCode": "请输入您的验证码",
+    "inputPassword": "请输入您的密码",
+    "sendFreiendRequestSuccess": "发送好友请求成功！",
+    "registerSuccess": "注册成功！",
+    "inputInvitationCode": "请输入您的邀请码",
+    "downloadFailed": "下载失败！",
+    "beingBlacklist": "对方已将你加入黑名单！",
+    "usingFriendVerification": "开启了好友验证，你还不是他的好友！"
   },
   "placeholder": {
-    "search": "搜索"
+    "somePerson": "{{num}}人",
+    "selectMember": "选择成员",
+    "setInfo": "设置信息",
+    "regain": "重新获取",
+    "optional": "（选填）",
+    "invitationCode": "邀请码",
+    "getBack": "返回",
+    "nextStep": "下一步",
+    "register": "新用户注册",
+    "registerToast": "还没有账号？",
+    "toRegister": "立即注册",
+    "login": "登录",
+    "pleaseEnterSendTo": "请输入发送至",
+    "verifyCode": "验证码",
+    "verifyValidity": "的 6 位验证码，有效期 10 分钟",
+    "sendVerifyCode": "发送验证码",
+    "qrCodeLogin": "扫码登录",
+    "qrCodeLoginTitle": "请使用OpenIM移动端扫描二维码",
+    "welcome": "欢迎使用OpenIM",
+    "title": "在线化办公",
+    "subTitle": "多人协作，打造高效办公方式",
+    "myCreated": "我创建的",
+    "myJoined": "我创建的",
+    "newFriends": "新的好友",
+    "groupNotification": "群通知",
+    "friendVerification": "好友验证",
+    "groupInfo": "群组信息",
+    "personalInfo": "个人信息",
+    "inviteToGroup": "邀请入群",
+    "qrCodeToGroup": "扫码入群",
+    "selectIDToGroup": "搜索群组ID",
+    "remark": "备注",
+    "email": "邮箱",
+    "phoneNumber": "手机号",
+    "verifyPhoneNumber": "验证手机号",
+    "birth": "生日",
+    "gender": "性别",
+    "man": "男",
+    "female": "女",
+    "unknown": "未知",
+    "nickName": "昵称",
+    "groupNickName": "群昵称",
+    "joinGroupTime": "入群时间",
+    "joinGroupMode": "入群方式",
+    "editInfo": "编辑资料",
+    "message": "聊天信息",
+    "relevantMessage": "{{count}}条相关的聊天记录",
+    "overview": "综合",
+    "latestChat": "最近聊天",
+    "myFriend": "我的好友",
+    "myGroup": "我的群组",
+    "groupName": "群名称",
+    "groupAvatar": "群头像",
+    "groupMember": "群成员",
+    "selected": "已选择",
+    "moveBlacklist": "加入黑名单",
+    "willFilterThisUserMessage": "将无法接收该好友消息。",
+    "unfriend": "解除好友",
+    "shieldConversation": "屏蔽该会话",
+    "isRead": "已读",
+    "unread": "未读",
+    "revoke": "撤回",
+    "copy": "复制",
+    "check": "多选",
+    "sendMessage": "发送消息",
+    "save": "保存",
+    "group": "群组",
+    "groupTppe": "群类型",
+    "workGroup": "工作群",
+    "myGroupNickname": "我的群聊昵称",
+    "notNotify": "消息免打扰",
+    "allMuted": "全体禁言",
+    "groupVerification": "群聊验证",
+    "groupMemberPermissions": "群成员权限",
+    "transferGroup": "转让群组",
+    "exitGroup": "退出群组",
+    "exitGroupToast": "退出后你将不再接收该群组消息。",
+    "disbandGroup": "解散群组",
+    "disbandGroupToast": "解除后将移除所有群成员。",
+    "and": "和",
+    "groupOwner": "群主",
+    "administrator": "管理员",
+    "setAdministrator": "设为管理员",
+    "mute": "禁言",
+    "cancelMute": "取消禁言",
+    "setMute": "设置禁言",
+    "onlyManageCanSend": "开启后仅群主和管理员可发言。",
+    "publish": "发布",
+    "edit": "编辑",
+    "file": "文件",
+    "emoji": "表情",
+    "image": "图片",
+    "video": "视频",
+    "card": "名片",
+    "personalCard": "个人名片",
+    "screenshot": "截图",
+    "sticky": "置顶",
+    "pleaseEnter": "请输入",
+    "clickToModify": "点击修改",
+    "search": "搜索",
+    "about": "关于我们",
+    "password": "密码",
+    "forgetPassword": "忘记密码",
+    "changePassword": "修改密码",
+    "checkNewVersion": "检查新版本",
+    "viewMore": "查看更多",
+    "add": "添加",
+    "remove": "移除",
+    "delete": "删除",
+    "close": "关闭",
+    "blackList": "通讯录黑名单",
+    "oldPassword": "原密码:",
+    "newPassword": "新密码:",
+    "confirmPassword": "确认密码:",
+    "chat": "消息",
+    "contact": "通讯录",
+    "contacts": "联系人",
+    "myInfo": "我的信息",
+    "accountSetting": "账号设置",
+    "logOut": "退出登录",
+    "personalSetting": "个人设置",
+    "chooseLanguage": "选择语言",
+    "closeButtonEvent": "点击关闭按钮时的事件",
+    "exitApplication": "退出应用",
+    "minimize": "最小化托盘",
+    "messageToast": "消息提示",
+    "messageAllowBeep": "新消息提示音",
+    "messageNotNotify": "勿扰模式",
+    "addFriends": "添加好友",
+    "addGroup": "添加群组",
+    "createGroup": "创建群聊",
+    "createNow": "立即创建",
+    "createGroupToast": "创建群组，立即开启在线化办公",
+    "addFriendsSetting": "添加好友设置",
+    "refuseAddFriend": "禁止添加我为好友",
+    "markAsRead": "标为已读",
+    "send": "发送",
+    "sendTo": "发送给：",
+    "groupAnnouncement": "群公告",
+    "noGroupAnnouncement": "还没有群公告哦～",
+    "needManageEdit": "只有群主及管理员可以编辑",
+    "loosenToSend": "松开发送给",
+    "reEdit": "重新编辑",
+    "multipleNewMessages": "{{count}}条新消息",
+    "reply": "回复",
+    "sendShortcutkey": "Enter发送/Shift+Enter换行",
+    "mentionAll": "所有人",
+    "forward": "转发",
+    "mergeForward": "合并转发",
+    "messageHistory": "聊天记录",
+    "historyList": "历史记录",
+    "memberList": "群成员列表",
+    "invitation": "邀请好友",
+    "share": "分享名片",
+    "selectUser": "选择用户",
+    "setting": "设置",
+    "offLine": "离线",
+    "online": "在线",
+    "typing": "正在输入",
+    "kick": "踢出",
+    "kickMember": "踢出成员",
+    "forbidLookMemberInfo": "不允许查看其他群成员资料",
+    "forbidAddMember": "不允许添加群成员为好友",
+    "applyNeedInvite": "群成员邀请无需验证",
+    "applyNeedVerification": "需要发送验证消息",
+    "applyAll": "允许所有人加群"
   },
   "empty": {
-    "noSearchResults": "暂无搜索结果"
+    "showAllResults": "已展示全部结果！",
+    "noSearchResults": "没有更多搜索结果！",
+    "fileContentEmpty": "文件为空！"
   },
   "messageDescription": {
     "imageMessage": "[图片]",
@@ -45,9 +258,10 @@
     "mergeMessage": "[聊天记录]",
     "customMessage": "[自定义消息]",
     "notSupMessage": "[暂不支持的消息类型]",
-    "drftPrefix": "[草稿]",
     "atAllPrefix": "[所有人]",
     "atYouPrefix": "[有人@你]",
+    "unreadCount": "[{{count}}条]",
+    "catchMessage": "[暂未支持的消息类型]",
     "groupAnnouncementPrefix": "[群公告]",
     "revokeMessage": "{{revoker}}撤回了一条消息",
     "advanceRevokeMessage": "{{operator}}撤回了一条{{revoker}}发送的消息",
@@ -73,6 +287,33 @@
     "minute": "{{num}}分钟",
     "hour": "{{num}}小时",
     "day": "{{num}}天",
-    "justNow": "刚刚"
+    "justNow": "刚刚",
+    "thisWeek": "本周",
+    "thisMonth": "本月",
+    "earlier": "更早"
+  },
+  "application": {
+    "agree": "同意",
+    "refuse": "拒绝",
+    "agreed": "已同意",
+    "refused": "已拒绝",
+    "information": "验证信息",
+    "pending": "等待验证",
+    "applyToJoin": "申请加入",
+    "applyToFriend": "申请添加您为好友"
+  },
+  "errCode": {
+    "passwordError": "密码错误",
+    "accountNotExist": "账号不存在",
+    "phoneNumberRegistered": "手机号已注册",
+    "accountRegistered": "账号已注册",
+    "operationTooFrequent": "操作过于频繁，请稍后再试",
+    "verificationCodeError": "验证码错误",
+    "verificationCodeExpired": "验证码已过期",
+    "verificationCodeErrorLimitExceed": "验证码错误次数超过限制，请稍后再试",
+    "verificationCodeUsed": "验证码已被使用",
+    "invitationCodeUsed": "邀请码已被使用",
+    "invitationCodeNotExist": "邀请码不存在",
+    "operationRestriction": "操作限制"
   }
 }
