fix: friend application action & i18n fix

--- a/src/i18n/resources/zh.json
+++ b/src/i18n/resources/zh.json
@@ -29,22 +29,22 @@
     "unfriendFailed": "解除好友失败！",
     "getMessageListFailed": "获取消息列表失败！",
     "sendApplicationFailed": "发送请求失败！",
-    "loading": "登陆中...",
+    "loading": "登录中...",
     "syncing": "同步中...",
     "syncFailed": "同步失败！",
-    "clearChatHistory": "清空聊天记录！",
+    "clearChatHistory": "清空聊天记录",
     "confirmClearChatHistory": "确认清空聊天记录吗？",
     "applyDownloadFailed": "下载失败！",
     "loginExpiration": "当前登录已过期,请重新登录！",
     "accountKicked": "您的账号已在其他设备登录,请重新登录！",
     "updatePasswordSuccess": "修改密码成功，请重新登录！",
     "inputOldPassword": "请输入原密码！",
-    "passwordRules": "请输入6-20位字母+数字组合！",
-    "reconfirmPassword": "请再次确认您的密码！",
+    "passwordRules": "6-20位，至少包含数字、字母",
+    "reconfirmPassword": "请再次确认您的密码",
     "passwordsDifferent": "两次输入的密码不一致！",
     "confirmlogOut": "确认退出登录当前账号吗？",
     "updateAvatarFailed": "修改头像失败！",
-    "notCanSendMessage": "无法在已退出的群聊中发送消息！",
+    "notCanSendMessage": "无法在已退出的群聊发消息！",
     "groupMuted": "管理员或群主已开启全体禁言！",
     "messagesDeleteFailed": "部分消息删除失败！",
     "confirmkickMember": "确认将{{name}}踢出群聊吗？",
@@ -62,18 +62,16 @@
     "sendJoinGroupRequestSuccess": "发送入群请求成功！",
     "inputNickName": "请输入昵称",
     "inputCorrectPhoneNumber": "请输入手机号",
-    "inputCorrectEmail": "请输入邮箱",
     "inputVerifyCode": "请输入您的验证码",
     "inputPassword": "请输入您的密码",
     "sendFreiendRequestSuccess": "发送好友请求成功！",
     "registerSuccess": "注册成功！",
     "inputInvitationCode": "请输入您的邀请码",
     "downloadFailed": "下载失败！",
-    "beingBlacklist": "对方已将你加入黑名单！",
-    "usingFriendVerification": "开启了好友验证，你还不是他的好友！"
+    "beingBlacklist": "对方已将你加入黑名单",
+    "usingFriendVerification": "对方开启了好友验证，你还不是他的好友"
   },
   "placeholder": {
-    "somePerson": "{{num}}人",
     "selectMember": "选择成员",
     "setInfo": "设置信息",
     "regain": "重新获取",
@@ -82,7 +80,7 @@
     "getBack": "返回",
     "nextStep": "下一步",
     "register": "新用户注册",
-    "registerToast": "还没有账号？",
+    "registerToast": "还没有注册？",
     "toRegister": "立即注册",
     "login": "登录",
     "pleaseEnterSendTo": "请输入发送至",
@@ -95,7 +93,7 @@
     "title": "在线化办公",
     "subTitle": "多人协作，打造高效办公方式",
     "myCreated": "我创建的",
-    "myJoined": "我创建的",
+    "myJoined": "我加入的",
     "newFriends": "新的好友",
     "groupNotification": "群通知",
     "friendVerification": "好友验证",
@@ -119,7 +117,7 @@
     "joinGroupMode": "入群方式",
     "editInfo": "编辑资料",
     "message": "聊天信息",
-    "relevantMessage": "{{count}}条相关的聊天记录",
+    "relevantMessage": "{{count}}条相关聊天记录",
     "overview": "综合",
     "latestChat": "最近聊天",
     "myFriend": "我的好友",
@@ -225,7 +223,7 @@
     "messageHistory": "聊天记录",
     "historyList": "历史记录",
     "memberList": "群成员列表",
-    "invitation": "邀请好友",
+    "invitation": "邀请",
     "share": "分享名片",
     "selectUser": "选择用户",
     "setting": "设置",
@@ -242,7 +240,7 @@
   },
   "empty": {
     "showAllResults": "已展示全部结果！",
-    "noSearchResults": "没有更多搜索结果！",
+    "noSearchResults": "未搜索到相关结果",
     "fileContentEmpty": "文件为空！"
   },
   "messageDescription": {
@@ -265,7 +263,7 @@
     "groupAnnouncementPrefix": "[群公告]",
     "revokeMessage": "{{revoker}}撤回了一条消息",
     "advanceRevokeMessage": "{{operator}}撤回了一条{{revoker}}发送的消息",
-    "alreadyFriendMessage": "你们已经是好友了，开始聊天吧",
+    "alreadyFriendMessage": "你们已经成为好友，可以开始聊天了！",
     "createGroupMessage": "{{creator}}创建了群聊",
     "updateGroupInfoMessage": "{{operator}}修改了群信息",
     "updateGroupNameMessage": "{{operator}}修改了群名称为{{name}}",
@@ -273,14 +271,14 @@
     "transferGroupMessage": "{{owner}}转让了群主给{{newOwner}}",
     "quitGroupMessage": "{{name}}退出了群聊",
     "invitedToGroupMessage": "{{operator}}邀请了{{invitedUser}}加入群聊",
-    "kickInGroupMessage": "{{operator}}踢出了{{kickedUser}}",
+    "kickInGroupMessage": "{{kickedUser}}被{{operator}}踢出群聊",
     "joinGroupMessage": "{{name}}加入了群聊",
     "disbanedGroupMessage": "{{operator}}解散了群聊",
     "allMuteMessage": "{{operator}}开启了全体禁言",
     "cancelAllMuteMessage": "{{operator}}关闭了全体禁言",
-    "singleMuteMessage": "{{name}}被{{operator}}禁言了{{muteTime}}",
-    "cancelSingleMuteMessage": "{{operator}}取消了禁言{{name}}",
-    "burnReadStatus": "阅后即焚已{{status}}"
+    "singleMuteMessage": "{{name}}被{{operator}}禁言{{muteTime}}",
+    "cancelSingleMuteMessage": "{{name}}被{{operator}}取消了禁言",
+    "burnReadStatus": "已{{status}}阅后即焚"
   },
   "date": {
     "second": "{{num}}秒",
