feat: add single rtc

--- a/src/i18n/resources/en.json
+++ b/src/i18n/resources/en.json
@@ -5,6 +5,9 @@
   "no": "No",
   "confirm": "Confirm",
   "cancel": "Cancel",
+  "canceled": "Canceled",
+  "answer": "Answer",
+  "hangUp": "Hang up",
   "pieces": "Pieces",
   "open": "Open",
   "close": "Close",
@@ -221,6 +224,12 @@
     "mentionAll": "Everyone",
     "forward": "Forward",
     "mergeForward": "Merge and Forward",
+    "inviteYou": "Invites you for",
+    "videoCall": "Video Call",
+    "voiceCall": "Voice Call",
+    "microphone": "Microphone",
+    "camera": "Camera",
+    "connecting": "Connecting...",
     "messageHistory": "Chat History",
     "historyList": "History",
     "memberList": "Group member list",
