--- a/src/i18n/resources/zh.json
+++ b/src/i18n/resources/zh.json
@@ -5,6 +5,9 @@
   "no": "否",
   "confirm": "确认",
   "cancel": "取消",
+  "canceled": "已取消",
+  "answer": "接听",
+  "hangUp": "挂断",
   "pieces": "条",
   "open": "开启",
   "close": "关闭",
@@ -220,6 +223,12 @@
     "mentionAll": "所有人",
     "forward": "转发",
     "mergeForward": "合并转发",
+    "inviteYou": "邀请你进行",
+    "videoCall": "视频通话",
+    "voiceCall": "语音通话",
+    "microphone": "麦克风",
+    "camera": "摄像头",
+    "connecting": "连接中...",
     "messageHistory": "聊天记录",
     "historyList": "历史记录",
     "memberList": "群成员列表",
