fix(client): 增加消息右键菜单

--- a/src/i18n/resources/en.json
+++ b/src/i18n/resources/en.json
@@ -331,6 +331,9 @@
     "sendWithShiftEnter": "Send with Shift+Enter",
     "mentionAll": "Everyone",
     "forward": "Forward",
+    "answerYes": "yes",
+    "answerNo": "no",
+    "re": "re",
     "mergeForward": "Merge and Forward",
     "messageHistory": "Chat History",
     "whosMessageHistory": "Chat History for {{who}} ",
