--- a/src/i18n/resources/zh.json
+++ b/src/i18n/resources/zh.json
@@ -332,6 +332,9 @@
     "sendWithShiftEnter": "按Shift+Enter发送",
     "mentionAll": "所有人",
     "forward": "转发",
+    "answerYes": "yes",
+    "answerNo": "no",
+    "re": "回复",
     "mergeForward": "合并转发",
     "messageHistory": "聊天记录",
     "whosMessageHistory": "{{who}}的聊天记录",
