fix(client): 增加消息右键菜单

--- a/src/i18n/resources/en.json
+++ b/src/i18n/resources/en.json
@@ -331,9 +331,8 @@
     "sendWithShiftEnter": "Send with Shift+Enter",
     "mentionAll": "Everyone",
     "forward": "Forward",
-    "answerYes": "yes",
-    "answerNo": "no",
-    "re": "re",
+    "quickReplyYes": "yes",
+    "quickReplyNo": "no",
     "mergeForward": "Merge and Forward",
     "messageHistory": "Chat History",
     "whosMessageHistory": "Chat History for {{who}} ",
