fix(client): 调整按钮为快捷回复语

--- a/src/i18n/resources/en.json
+++ b/src/i18n/resources/en.json
@@ -331,6 +331,7 @@
     "sendWithShiftEnter": "Send with Shift+Enter",
     "mentionAll": "Everyone",
     "forward": "Forward",
+    "quickReply": "Quick reply msg",
     "quickReplyYes": "yes",
     "quickReplyNo": "no",
     "mergeForward": "Merge and Forward",
