--- a/src/i18n/resources/zh.json
+++ b/src/i18n/resources/zh.json
@@ -332,6 +332,7 @@
     "sendWithShiftEnter": "按Shift+Enter发送",
     "mentionAll": "所有人",
     "forward": "转发",
+    "quickReply": "快捷回复语",
     "quickReplyYes": "快捷回复：Yes",
     "quickReplyNo": "快捷回复：No",
     "mergeForward": "合并转发",
